--- a/src/CoreMVCBlot/Views/Home/Index.cshtml
+++ b/src/CoreMVCBlot/Views/Home/Index.cshtml
@@ -14,6 +14,10 @@
 <!-- CTSECISSUE: ReflectedXSS -->
 @Html.Raw(Context.Request.Form["Name"])
 
+<!-- CTSECISSUE: ReflectedXSS -->
+<!-- CTSECISSUE: LinkPoisoning -->
+<a href="https://@ViewBag.Host/this/click">click me</a>
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
